8322996: BoxLockNode creation fails with assert(reg < CHUNK_SIZE) failed: sanity

Backport-of: 69586e7bdffe1a840c3a86e6ec83568de24c6fe5